--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <li class="nav__item"><a href="#mywork" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     </ul>
-                </div>''
+                </div>
             </nav>
         </header>
 
